Fix exec pic overlap. (still looks bad)

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -146,7 +146,7 @@ a {
 
 .execpic {
     float: right;
-    width: 100px;
+    height: 110px;
 }
 
 .footer {
